--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/bpshonyak/node-token-server/issues"
   },
-  "homepage": "https://github.com/bpshonyak/node-token-server#readme"
+  "homepage": "https://github.com/bpshonyak/node-token-server#readme",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "jsonwebtoken": "^7.0.1",
+    "mongoose": "^4.5.3",
+    "morgan": "^1.7.0"
+  }
 }
