--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-token-server",
   "version": "0.0.1",
   "description": "Simple node token authentication server",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
